# llmops-kv-hygiene

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AI_PIPELINE_SUMMARY.md  CI_ENHANCEMENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.cpu  Dockerfile.cuda  LICENSE  NEW_WORKFLOW_SUMMARY.md  README.md  SECURITY.md  TEST_PR.md  docker-compose.yaml  mypy.ini  pipeline-flow-diagram.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  trivy-scan.yml
architecture/: faangmula_principles.md  kv_hygiene_overview.md
architecture/diagrams/: kv-cache-flow.mmd  pipeline-gates.mmd
ci_cd/: README.md  github_actions.yml  jenkins_pipeline.groovy  test_matrix.json
ci_metrics/: quality_metrics.json
compliance/: fedramp_high_alignment.md  hipaa_alignment.md  soc2_alignment.md
docs/: AI_FEATURES_GUIDE.md  AI_PIPELINE_SUMMARY.md  CI_ENHANCEMENTS.md  NEW_WORKFLOW_SUMMARY.md
k8s/: cronjob-eviction-checker.yaml  cronjob-verify-logs.yaml  deployment-tracer-gpu.yaml  deployment-tracer-sidecar.yaml  job-cuda-sanity.yaml  pvc-forensics.yaml  secret-foreensic-hmac.yaml  service-metrics-gpu.yaml  service-metrics.yaml  servicemonitor.yaml
policy/: ci.rego
scripts/: dry_run_ci.sh  run_tests.sh
test_support/: optional_deps.py
tests/: conftest.py  fuzzing_harness.py  test_additional_coverage.py  test_async_cuda_sim.py  test_audit_coverage_boost.py  test_audit_type_ignores.py  test_audit_type_ignores_more.py  test_cache_tracer_edges.py  test_canary_validate.py  test_chaos_validation.py  test_cuda_async.py  test_dummy_fail.py  test_forensic_logger_edges.py  test_fuzzing_harness.py  test_kv_isolation.py  test_kv_sanitization.py  test_log_pruner.py  test_meta_self_test.py  test_metrics_utils.py  test_micro_edge_cases.py  test_more_coverage.py  test_policies.py  test_rotation_stress.py  test_sanitizer_additional.py  test_sanitizer_coverage_boost.py  test_sanitizer_edges.py  test_sanitizer_module.py  test_targeted_uncovered.py  test_tools_misc.py  test_verify_cli_and_prune.py  test_verify_logs.py
tools/: __init__.py  activation_logger.py  audit_type_ignores.py  buffer_model.py  cache_tracer.py  canary_validate.py  chaos_validation.py  eviction_checker.py  forensic_logger.py  log_pruner.py  meta_self_test.py  metrics_exporter.py  metrics_utils.py  policies.py  sanitizer.py  verify_logs.py
